[package]
name = "dbg-rs"
version = "0.1.0"
edition = "2021"
description = "Safe Rust bindings for the COM interfaces of the Windows debugging engine"
license = "MIT"
repository = "https://github.com/joaoviictorti/dbg"
homepage = "https://github.com/joaoviictorti/dbg"
readme = "README.md"
keywords = ["windows", "rust", "dbgeng", "binding"]
categories = ["api-bindings"]
exclude = [
    ".gitignore",
    "target/",
    "/examples"
]

[dependencies]
thiserror = "2.0.11"
windows = { version = "0.59.0", features = ["Win32_System_Diagnostics_Debug_Extensions"] }
