[package]
name = "dbg-rs"
version = "0.1.2"
edition = "2024"
description = "Safe Rust bindings for the COM interfaces of the Windows debugging engine"
license = "MIT"
repository = "https://github.com/joaoviictorti/dbg"
homepage = "https://github.com/joaoviictorti/dbg"
readme = "README.md"
keywords = ["windows", "rust", "dbgeng", "binding"]
categories = ["api-bindings"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
thiserror = "2.0.11"
windows = { version = "0.59.0", features = ["Win32_System_Diagnostics_Debug_Extensions"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-gnu", "x86_64-pc-windows-msvc"]